[package]
name = "photon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["query"] }
axum-macros = "0.4.0"
elasticsearch = "8.5.0-alpha.1"
elasticsearch-dsl = "0.4.20"
openssl = { version = "0.10.62", features = ["vendored"] }
rustls = "0.22.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
